[package]
name = "bigtable-decode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-storage-bigtable = "1.9.9"
bincode = "1.3.3"
enum-iterator = "0.7.0"
serde = "*"
serde_json = "*"
futures = "0.3.21"
solana-sdk = "1.9.9"
tokio = { version = "1.17.0", features = ["full"] }
