[package]
name = "bigtable-decode"
version = "0.1.0"
edition = "2021"
authors = ["Ben"]

# [lib]
#name = "solana_bigtable_decode"
#crate-type = ["dylib"]

#[dependencies.cpython]
#version = "*"
#features = ["extension-module"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-storage-bigtable = "1.10.0"
bincode = "1.3.3"
enum-iterator = "0.7.0"
serde = "*"
serde_json = "*"
futures = "0.3.21"
solana-sdk = "1.10.0"
tokio = { version = "1.17.0", features = ["full"] }
